Added a '404' page with a button redirecting users to my issues page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>jberry</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="default.css">
+  </head>
+  <body>
+    <div class="404container">
+      <h1>Hey you!</h1>
+      <h3>Yeah you! Sorry this site is pretty bare but I am currently building it out</h3>
+      <p>Come back in a day or two and there should be a nice first draft published (hopefully)<br><br>Click the button to check out my issues to see what I'm working on now for this website:</p>
+      <form action="https://github.com/jberry93/jberry93.github.io/issues">
+        <input type="submit" value="GitHub Issues">
+      </form>
+    </div>
+  </body>
+</html>
