--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>jberry</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="server/public/all.css">
     <link rel="stylesheet" href="default.css">
   </head>
   <body>
