Resolved #9 user can see a picture with the text typing itself out

--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="server/public/all.css">
     <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" type="text/css" href='https://fonts.googleapis.com/css?family=Lato'>
   </head>
   <body>
-    <div class="404container">
+    <!-- <div class="404container">
       <h1>Hey you!</h1>
       <h3>Yeah you! Sorry this site is pretty bare but I am currently building it out</h3>
       <p>Come back in a day or two and there should be a nice first draft published (hopefully)<br><br>Click the button to check out my issues to see what I'm working on now for this website:</p>
       <form action="https://github.com/jberry93/jberry93.github.io/issues">
         <input type="submit" value="GitHub Issues">
       </form>
+    </div> -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#social">Social</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="section1">
+      <img class="headshot" src="server/public/headshot2.jpg">
+      <h1>Jeffrey Berry</h1>
+      <br>
+      <h1>I am a <span class="type"></span></h1>
     </div>
+    <script src="server/public/vendor.js"></script>
+    <script src="js/type.js"></script>
   </body>
 </html>
