--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
     <title>jberry</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="all.min.css">
     <link rel="stylesheet" href="default.css">
     <link rel="stylesheet" type="text/css" href='https://fonts.googleapis.com/css?family=Lato'>
   </head>
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#social">Social</a></li>
-        </ul>
+  <body class="pushable">
+    <div class="ui vertical inverted sidebar menu left">
+      <a class="item" href="#skills">Skills</a>
+      <a class="item" href="#projects">Projects</a>
+      <a class="item" href="#social">Social</a>
+    </div>
+    <div class="pusher">
+      <div class="ui inverted vertical masthead center aligned segment">
+        <div class="ui large secondary inverted pointing menu">
+          <a class="toc item"><img class="hamburger" src="minImage/hamburger.svg"></a>
+        </div>
       </div>
-    </nav>
-    <div class="section1">
-      <img class="headshot" src="minImage/headshot2.jpg">
-      <h1>Jeffrey Berry</h1>
-      <br>
-      <h1>I am a <span class="type"></span></h1>
+      <div class="section1">
+        <img class="headshot" src="minImage/headshot2.jpg">
+        <h1>Jeffrey Berry</h1>
+        <br>
+        <h1>I am a <span class="type"></span></h1>
+      </div>
     </div>
     <script src="vendor.min.js"></script>
     <script src="my.min.js"></script>
