#10 added skills to html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,90 @@
       </div>
       <div class="section1">
         <img class="headshot" src="minImage/headshot2.jpg">
-        <h1>Jeffrey Berry</h1>
-        <br>
-        <h1>I am a <span class="type"></span></h1>
+        <h2>Jeffrey Berry</h2>
+        <h2>I am a <span class="type"></span></h2>
+      </div>
+      <div class="section2">
+        <h2 class="animated pulse infinite" id="skills">Skills</h2>
+        <br><br>
+        <div class="ui stackable four column grid">
+          <div class="column">
+            <span class="skill" id="javascript">
+              <img src="minImage/javascript.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="node">
+              <img src="minImage/nodejs.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="express">
+              <img src="minImage/express.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="mongo">
+              <img src="minImage/mongodb.svg">
+            </span>
+          </div>
+        </div>
+        <div class="ui stackable four column grid">
+          <div class="column">
+            <span class="skill" id="jquery">
+              <img src="minImage/jquery.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="gulp">
+              <img src="minImage/gulp.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="mocha">
+              <img src="minImage/mocha.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="npm">
+              <img src="minImage/npm.svg">
+            </span>
+          </div>
+        </div>
+        <div class="ui stackable four column grid">
+          <div class="column">
+            <span class="skill" id="bower">
+              <img src="minImage/bower.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="bootstrap">
+              <img src="minImage/bootstrap.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="html">
+              <img src="minImage/html.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="css">
+              <img src="minImage/css.svg">
+            </span>
+          </div>
+        </div>
+        <div class="ui stackable two column grid">
+          <div class="column">
+            <span class="skill" id="git">
+              <img src="minImage/git.svg">
+            </span>
+          </div>
+          <div class="column">
+            <span class="skill" id="github">
+              <img src="minImage/github.svg">
+            </span>
+          </div>
+        </div>
       </div>
     </div>
     <script src="vendor.min.js"></script>
