Filled out education and created experience, projects, and social sections

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body class="pushable">
     <div class="ui vertical inverted sidebar menu left">
       <a class="item" href="#skills">Skills</a>
+      <a class="item" href="#education">Education</a>
+      <a class="item" href="#experience">Experience</a>
       <a class="item" href="#projects">Projects</a>
       <a class="item" href="#social">Social</a>
     </div>
@@ -21,12 +23,12 @@
           <a class="toc item"><img class="hamburger" src="minImage/hamburger.svg"></a>
         </div>
       </div>
-      <div class="section1">
+      <div class="section1 head">
         <img class="headshot" src="minImage/headshot2.jpg">
         <h2>Jeffrey Berry</h2>
         <h2>I am a <span class="type"></span></h2>
       </div>
-      <div class="section2">
+      <div class="section2 skills">
         <h2 class="animated pulse infinite" id="skills">Skills</h2>
         <br><br>
         <div class="ui stackable four column grid">
@@ -107,6 +109,34 @@
             </span>
           </div>
         </div>
+      </div>
+      <div class="section3 education">
+        <h2 class="animated pulse infinite" id="education">Education</h2>
+        <div class="ui two column grid">
+          <div class="column">
+            <img id="diploma" src="minImage/diploma.svg">
+            <h3>Marymount California University</h3>
+            <h5>August 2011 - May 2015</h5>
+            <h5>BA Biomedical and Behavioral Science (GPA 3.57 / 4.00)</h5>
+          </div>
+          <div class="column">
+            <img id="developer" src="minImage/developer.svg">
+            <h3>Orange County Code School</h3>
+            <h5>August 2015 - October 2015</h5>
+          </div>
+        </div>
+      </div>
+      <div class="section4 experience">
+        <h2 class="animated pulse infinite" id="experience">Experience</h2>
+        <h1>Building..</h1>
+      </div>
+      <div class="section5 projects">
+        <h2 class="animated pulse infinite" id="projects">Projects</h2>
+        <h1>Building..</h1>
+      </div>
+      <div class="section6 social">
+        <h2 class="animated pulse infinite" id="social">Social</h2>
+        <h1>Building..</h1>
       </div>
     </div>
     <script src="vendor.min.js"></script>
