--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>I am a <span class="type"></span></h2>
       </div>
       <div class="section2 skills">
-        <h2 class="animated pulse infinite" id="skills">Skills</h2>
+        <h1 id="skills">Skills</h1>
         <br><br>
         <div class="ui stackable four column grid">
           <div class="column">
@@ -111,31 +111,41 @@
         </div>
       </div>
       <div class="section3 education">
-        <h2 class="animated pulse infinite" id="education">Education</h2>
-        <div class="ui two column grid">
+        <h1 id="education">Education</h1>
+        <div class="ui stackable two column grid">
+          <div class="column">
+            <img id="developer" src="minImage/developer.svg">
+            <h3>Orange County Code School</h3>
+            <h5>August 2015 - October 2015</h5>
+          </div>
           <div class="column">
             <img id="diploma" src="minImage/diploma.svg">
             <h3>Marymount California University</h3>
             <h5>August 2011 - May 2015</h5>
             <h5>BA Biomedical and Behavioral Science (GPA 3.57 / 4.00)</h5>
           </div>
-          <div class="column">
-            <img id="developer" src="minImage/developer.svg">
-            <h3>Orange County Code School</h3>
-            <h5>August 2015 - October 2015</h5>
-          </div>
         </div>
       </div>
       <div class="section4 experience">
-        <h2 class="animated pulse infinite" id="experience">Experience</h2>
-        <h1>Building..</h1>
+        <h1 id="experience">Experience</h1>
+        <div class="ui stackable two column grid">
+          <div class="column">
+            <h3>New Position Coming Soon!</h3>
+            <h5>January 2016</h5>
+          </div>
+          <div class="column">
+            <h3>Orange County Code School</h3>
+            <h4>Full Stack JavaScript Developer</h4>
+            <h5>August 2015 - Present</h5>
+          </div>
+        </div>
       </div>
       <div class="section5 projects">
-        <h2 class="animated pulse infinite" id="projects">Projects</h2>
-        <h1>Building..</h1>
+        <h1 id="projects">Projects</h1>
+        
       </div>
       <div class="section6 social">
-        <h2 class="animated pulse infinite" id="social">Social</h2>
+        <h1 id="social">Social</h1>
         <h1>Building..</h1>
       </div>
     </div>
