Added some skills

--- a/index.html
+++ b/index.html
@@ -107,6 +107,58 @@
           <img src="images/babel.svg" alt="Babel">
         </div>
       </div>
+      <div class="row">
+        <div class="skills column">
+          <img src="images/karma.svg" alt="Karma">
+        </div>
+        <div class="skills column">
+          <img src="images/jasmine.svg" alt="Jasmine">
+        </div>
+        <div class="skills column">
+          <img src="images/mocha.svg" alt="Mocha">
+        </div>
+      </div>
+      <div class="row">
+        <div class="skills column">
+          <img src="images/semantic.svg" alt="Semantic">
+        </div>
+        <div class="skills column">
+          <img src="images/bootstrap.svg" alt="Bootstrap">
+        </div>
+        <div class="skills column">
+          <img src="images/browserify.svg" alt="Browserify">
+        </div>
+      </div>
+      <div class="row">
+        <div class="skills column">
+          <img src="images/angular.svg" alt="Angular">
+        </div>
+        <div class="skills column">
+          <img src="images/slack.svg" alt="Slack">
+        </div>
+        <div class="skills column">
+          <img src="images/npm.svg" alt="NPM">
+        </div>
+      </div>
+      <div class="row">
+        <div class="skills column">
+          <img src="images/nodejs.svg" alt="NodeJS">
+        </div>
+        <div class="skills column">
+          <img src="images/express.svg" alt="Express">
+        </div>
+        <div class="skills column">
+          <img src="images/git.svg" alt="Git">
+        </div>
+      </div>
+      <div class="row">
+        <div class="skills column">
+          <img src="images/github.svg" alt="Github">
+        </div>
+        <div class="skills column">
+          <img src="images/gulp.svg" alt="Gulp">
+        </div>
+      </div>
     </div>
   </body>
 </html>
