--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>jberry93</title>
+    <title>Jeffrey Berry</title>
     <link rel="stylesheet" href="node_modules/milligram/dist/milligram.min.css">
     <link rel="stylesheet" href="style/default.css">
   </head>
