Added a linkedin link

--- a/index.html
+++ b/index.html
@@ -160,5 +160,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a href="https://www.linkedin.com/in/jeffrey-berry-82154a3a">
+        <img class="linkedin" src="images/linkedin.svg" alt="LinkedIn">
+      </a>
+    </footer>
   </body>
 </html>
