--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Jeffrey Berry</title>
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -12,6 +13,24 @@
           ga('create', 'UA-75639225-1', 'auto');
           ga('send', 'pageview');
     </script>
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: { families: [ 'Lato::latin' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })();
+    </script>
+    <style>
+      body {
+        font-family: "Lato", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
