--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <link rel="stylesheet" href="node_modules/milligram/dist/milligram.min.css">
     <style>
       body {
-        font-family: "Lato", sans-serif;
+        font-family: "Roboto", sans-serif;
       }
     </style>
   </head>
