--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="stylesheet" href="node_modules/milligram/dist/milligram.min.css">
     <style>
       body {
+        background-color: #f5f5f5;
+        -webkit-font-smoothing: antialiased;
         font-family: "Roboto", sans-serif;
       }
     </style>
