--- a/index.html
+++ b/index.html
@@ -8,37 +8,18 @@
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
           ga('create', 'UA-75639225-1', 'auto');
           ga('send', 'pageview');
     </script>
-    <script type="text/javascript">
-      WebFontConfig = {
-        google: { families: [ 'Lato::latin' ] }
-      };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })();
-    </script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.1.0/milligram.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <style>
       body {
         background-color: #f5f5f5;
         -webkit-font-smoothing: antialiased;
-        font-family: "Roboto", sans-serif;
+        font-family: sans-serif;
       }
     </style>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="bundle.js"></script>
+    <h1>Hello World!</h1>
   </body>
 </html>
