--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Jeffrey Berry</title>
-    <meta name="viewport" content="width=device-width">
-    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-75639225-1', 'auto');
-          ga('send', 'pageview');
-    </script>
-    <style>
-      body {
-        background-color: #f5f5f5;
-        -webkit-font-smoothing: antialiased;
-        font-family: sans-serif;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Jeffrey Berry</title><meta name="viewport" content="width=device-width"><script src="./app/analytics.js"></script><link rel="stylesheet" href="./style.css"></head><body><h1>Hello World</h1></body></html>
