--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8">
     <title>Jeffrey Berry</title>
     <meta name="viewport" content="width=device-width">
-    <script src="./app/analytics.js"></script>
+    <meta name="theme-color" content="#efefef">
     <link rel="stylesheet" href="./style.css">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="icon" sizes="192x192" href="./images/myPic192.jpg">
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1 style="text-align:center;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);">Site is under construction :)</h1>
+    <script src="./app/analytics.js" async></script>
+    <script src="./app/registerWorker.js"></script>
   </body>
 </html>
