--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,9 @@
     <link rel="icon" sizes="192x192" href="./images/myPic192.jpg">
   </head>
   <body>
-    <h1 style="text-align:center;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);">Site is under construction :)</h1>
+    <h1 style="text-align:center;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);">Site is under construction</h1>
     <script src="./app/analytics.js" async></script>
+    <script src="./serviceWorker.js"></script>
     <script src="./app/registerWorker.js"></script>
   </body>
 </html>
