--- a/app/index.html
+++ b/app/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Jeffrey Berry</title>
-    <meta name="viewport" content="width=device-width">
-    <meta name="theme-color" content="#efefef">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="icon" sizes="192x192" href="./images/myPic192.jpg">
-  </head>
-  <body>
-    <div class="container">
-      <h1>Jeffrey Berry</h1>
-      <img class="mug" src="./images/myPic.jpeg" height="200px" width="200px" alt="my picture">
-      <p>Web Developer</p>
-      <a class="button" href="https://github.com/jberry93">Github</a>
-      <a class="button" href="https://www.linkedin.com/in/jeffrey-berry-82154a3a">LinkedIn</a>
-    </div>
-    <div class="container experience">
-      <h2>Experience</h2>
-      <div class="container experience">
-        <h3>Ethika</h3>
-        <p>Web Developer</p>
-        <p>August 2016 ~ Present</p>
-      </div>
-      <div class="container experience">
-        <h3>PlayStation Gaikai</h3>
-        <p>Web Developer Intern</p>
-        <p>January 2016 ~ July 2016</p>
-      </div>
-    </div>
-    <div class="container education">
-      <h2>Education</h2>
-      <div class="container education">
-        <h3>Marymount California University</h3>
-        <p>BA Liberal Arts: Biomedical/Behavioral Sciences</p>
-        <p>August 2011 ~ May 2015</p>
-      </div>
-      <div class="container education">
-        <h3>Orange County Code School</h3>
-        <p>Software Development</p>
-        <p>August 2015 ~ October 2015</p>
-      </div>
-    </div>
-    <script src="./app/analytics.js" async></script>
-    <script src="./serviceWorker.js"></script>
-    <script src="./app/registerWorker.js"></script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Jeffrey Berry</title>
+        <meta name="viewport" content="width=device-width">
+        <meta name="theme-color" content="#efefef">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="manifest" href="./manifest.json">
+        <link rel="icon" sizes="192x192" href="./images/myPic192.jpg">
+    </head>
+    <body>
+        <main>
+            <section class="container">
+                <h1>Jeffrey Berry</h1>
+                <img class="mug" src="./images/myPic.jpeg" height="200px" width="200px" alt="my picture">
+                <p>Web Developer</p>
+                <a class="button" href="https://github.com/jberry93">Github</a>
+                <a class="button" href="https://www.linkedin.com/in/jeffrey-berry-82154a3a">LinkedIn</a>
+            </section>
+            <section class="container experience">
+                <h2>Experience</h2>
+                <div class="container experience">
+                    <h3>COTUA</h3>
+                    <p>Web Developer</p>
+                    <p>May 2017 ~ Present</p>
+                </div>
+                <div class="container experience">
+                    <h3>Onstellar</h3>
+                    <p>Web Developer</p>
+                    <p>Feb 2018 ~ Apr 2018</p>
+                </div>
+                <div class="container experience">
+                    <h3>Ethika</h3>
+                    <p>Web Developer</p>
+                    <p>August 2016 ~ May 2017</p>
+                </div>
+                <div class="container experience">
+                    <h3>PlayStation Gaikai</h3>
+                    <p>Web Developer Intern</p>
+                    <p>January 2016 ~ July 2016</p>
+                </div>
+            </section>
+            <section class="container education">
+                <h2>Education</h2>
+                <div class="container education">
+                    <h3>Marymount California University</h3>
+                    <p>BA Liberal Arts: Biomedical/Behavioral Sciences</p>
+                    <p>August 2011 ~ May 2015</p>
+                </div>
+                <div class="container education">
+                    <h3>Orange County Code School</h3>
+                    <p>Software Development</p>
+                    <p>August 2015 ~ October 2015</p>
+                </div>
+            </section>
+        </main>
+        <script src="./app/analytics.js" async></script>
+        <script src="./serviceWorker.js"></script>
+        <script src="./app/registerWorker.js"></script>
+    </body>
 </html>
